commit prior to heroku deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FriendFinder",
   "version": "1.0.0",
-  "description": "",
+  "description": "matches your personality survey to the most compatible/similar person in database",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
